--- a/wwwroot/app/Components/navbar/navbar.component.html
+++ b/wwwroot/app/Components/navbar/navbar.component.html
@@ -27,15 +27,18 @@
                         <span class='glyphicon glyphicon-list-alt'></span> Listings
                     </a>
                 </li>
+                <li>
+                    <a [routerLink]="['mylistings']">
+                        <span class='glyphicon glyphicon-list-alt'></span> MyListings
+                    </a>
+                </li>
                 <li *ngIf="!authService.isLoggedIn()" [class.active]="isActive(['login'])">
                     <a class="login" [routerLink]="['login']">Login</a>
                 </li>
                 <li *ngIf="authService.isLoggedIn()">
                     <a class="logout" href="javascript:void(0)" (click)="logout()">Logout</a>
                 </li>
-                <li *ngIf="authService.isLoggedIn()" [class.active]="isActive(['item/edit', 0])">
-                    <a class="add" [routerLink]="['item/edit', 0]">Add New</a>
-                </li>
+
 
             </ul>
         </div>
